<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.want.imagecompare.ui.listfolders.SelectImagePoolActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        app:title="@string/action_select_imagepool" />

    <LinearLayout
        android:id="@+id/preventSwipeLayoutToUseFullHeightLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folderThumbnails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <!-- Horizontal bar -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- Select by date -->
    <TextView
        android:id="@+id/selectByDateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/title_date_select" />

    <LinearLayout
        android:id="@+id/selectByDateValueAndButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/selectByDateValue"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_date_select"
            android:inputType="date"
            android:autofillHints="Current date" />

        <ImageButton
            android:id="@+id/applyDateSelection"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/submit_date_selection" />

    </LinearLayout>

    <!-- Manage media access -->
    <LinearLayout
        android:id="@+id/manageMediaAccess"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:layout_weight="0"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mediaAccessDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/media_access_disclaimer" />

        <Button
            android:id="@+id/updateMediaAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/update_media_access" />

    </LinearLayout>

    <TextView
        android:id="@+id/appNameAndVersion"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="start"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textSize="11sp" />
</LinearLayout>